se agrega funcion de alerta y localstorage

--- a/index.html
+++ b/index.html
@@ -164,5 +164,7 @@
     
 
     <script src="src/js/main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
 </body>
 </html>
